deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: transcriptor
  labels:
    name: transcriptor
