deploy/kubernetes/api-deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: transcriptor
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api-container
          image: ghcr.io/guillaume-chervet/transcriptor-api:latest
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "1000Mi"
              cpu: "1000m"
            requests:
              ephemeral-storage: "1000Mi"
              memory: "1000Mi"
              cpu: "1000m"
