deploy/kubernetes/ia-worker-deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ia-worker
  namespace: transcriptor
  labels:
    app: ia-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ia-worker
  template:
    metadata:
      labels:
        app: ia-worker
      annotations:
        SlimFaas/Function: "true"
        SlimFaas/TimeoutSecondBeforeSetReplicasMin: "1200"
        SlimFaas/NumberParallelRequest: "1"
        SlimFaas/Visibility: "Private"
        SlimFaas/ReplicasMin: "0"
        SlimFaas/DependsOn: "redis"
    spec:
      containers:
        - name: ia-worker-container
          image: ghcr.io/guillaume-chervet/transcriptor-ia-worker:latest
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "2000Mi"
              cpu: "500m"
            requests:
              ephemeral-storage: "1000Mi"
              memory: "2000Mi"
              cpu: "500m"
