deploy/kubernetes/webapp-deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: transcriptor
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: ghcr.io/guillaume-chervet/transcriptor-webapp:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "96Mi"
              cpu: "50m"
            requests:
              ephemeral-storage: "200Mi"
              memory: "96Mi"
              cpu: "50m"
