deploy/kubernetes/api-service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: transcriptor
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80        # Port exposé publiquement
      targetPort: 8000 # Port interne de l'application
  type: LoadBalancer
