deploy/kubernetes/ia-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ia-worker
  namespace: transcriptor
spec:
  selector:
    app: ia-worker
  ports:
    - name: "http"
      port: 8000
