deploy/kubernetes/webapp-service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: transcriptor
spec:
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 80        # Port exposé publiquement
      targetPort: 8080 # Port interne de l'application
  type: LoadBalancer
